fix: enhance security configuration by refining CORS settings and updating authorization rules across services